fix(colorpicker): input cut off in bootstrap theme

--- a/packages/material/scss/_variables.scss
+++ b/packages/material/scss/_variables.scss
@@ -220,6 +220,8 @@ $colorpicker-slider-track-size: 10px !default;
 $colorpicker-slider-border-radius: 10px !default;
 $colorpicker-input-width: 50px !default;
 $colorpicker-hex-input-width: 70px !default;
+$colorpicker-input-padding-x: $input-padding-x !default;
+$colorpicker-input-padding-y: $input-padding-y !default;
 
 $list-item-padding-x: $padding-x * 1.5 !default;
 $list-item-padding-y: $padding-y / 2 !default;
